--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -45,7 +45,7 @@
       "sweet_potatoes": "boniato",
       "rosemary": "romero",
       "salt_pepper": "sal y pimienta",
-      "grapes": "grapes",
+      "grapes": "uvas",
       "white_wine": "vino blanco",
       "balsamic_vinagre": "vinagre balsámico",
       "burrata": "burrata",
