new image home desc

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -7,7 +7,7 @@
     "contact": "contacto"
   },
   "home": {
-    "home_desc": "Desc projecto"
+    "home_desc": "Pequeño proyecto para compartir mis receptas"
   },
   "recipe_page": {
     "in": "INGREDIENTES",
