--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -7,6 +7,6 @@
     "contact": "contact"
   },
   "home": {
-    "home-desc": "Desciptions of proyect"
+    "home-desc": "Small proyect to share my recipes"
   }
 }
