--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -7,6 +7,7 @@
     "contact": "contact"
   },
   "home": {
-    "home-desc": "Small proyect to share my recipes"
+    "home-desc": "Small proyect to share my recipes",
+    "allrecipes": "View all recipes"
   }
 }
