--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -67,7 +67,7 @@
     "chanamasala": {
       "name": "Chana masala",
       "title": "Chana masala",
-      "summary": "Chana masala (o tambien conocido como curry de garbanzos), no muy tradicional pero rapido y sencillo, a mi me gusta tambien acompañarlo de alubias moradas ",
+      "summary": "Chana masala, no muy tradicional pero rapido y sencillo, a mi me gusta tambien acompañarlo de alubias moradas ",
       "cardtitle": "Chana masala, rapido pero poco tradicional",
       "steps": {
         "chanamasala_curry_steap": {
